--- a/checkmarx-ast-eclipse-plugin-tests/pom.xml
+++ b/checkmarx-ast-eclipse-plugin-tests/pom.xml
@@ -1,33 +1,29 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-	<modelVersion>4.0.0</modelVersion>
-	<groupId>com.checkmarx.ast.eclipse.tests</groupId>
-	<artifactId>com.checkmarx.ast.eclipse.tests</artifactId>
-	<description>Checkmarx Eclipse Plugin Unit Tests Project</description>
-	<packaging>eclipse-test-plugin</packaging>
-	<parent>
-	    <groupId>com.checkmarx.ast.eclipse</groupId>
-	    <artifactId>checkmarx-eclipse-plugin</artifactId>
-	    <version>1.0.0-SNAPSHOT</version>
-	</parent>
-	
-	<dependencies>
-		<dependency>
-			<groupId>com.checkmarx.ast</groupId>
-			<artifactId>ast-cli-wrapper</artifactId>
-			<version>2.0.16</version>
-		</dependency>
-		<dependency>
-			<groupId>org.slf4j</groupId>
-			<artifactId>slf4j-api</artifactId>
-			<version>1.7.32</version>
-		</dependency>
-		<dependency>
-			<groupId>org.slf4j</groupId>
-			<artifactId>slf4j-simple</artifactId>
-			<version>1.7.32</version>
-		</dependency>
-	</dependencies>
-	  
+    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <modelVersion>4.0.0</modelVersion>
+    <groupId>com.checkmarx.ast.eclipse.tests</groupId>
+    <artifactId>com.checkmarx.ast.eclipse.tests</artifactId>
+    <description>Checkmarx Eclipse Plugin Unit Tests Project</description>
+    <packaging>eclipse-test-plugin</packaging>
+    <parent>
+        <groupId>com.checkmarx.ast.eclipse</groupId>
+        <artifactId>checkmarx-eclipse-plugin</artifactId>
+        <version>1.0.0-SNAPSHOT</version>
+    </parent>
+    
+    <dependencies>
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-core</artifactId>
+            <version>4.5.1</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter</artifactId>
+            <version>5.8.2</version>
+            <scope>test</scope>
+        </dependency>
+    </dependencies>
 </project>
