--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,13 +8,13 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3.5.2
-
+      
       - name: Set up JDK 8
         uses: actions/setup-java@v3
         with:
           distribution: temurin
           java-version: 8
-
+      
       - name: Cache local Maven repository
         uses: actions/cache@v3
         with:
@@ -22,7 +22,7 @@ jobs:
           key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
           restore-keys: |
             ${{ runner.os }}-maven-
-
+      
       - name: Run Integration Tests
         env:
           CX_BASE_URI: ${{ secrets.CX_BASE_URI }}
@@ -32,4 +32,5 @@ jobs:
           CX_NOT_MATCH_TEST_PROJECT: ${{ secrets.CX_NOT_MATCH_TEST_PROJECT }}
         run: |
           export DISPLAY=:99.0
-          Xvfb -ac :99 -screen 0 1920x1080x16 & mvn clean test -Dtest=**/*IntegrationTest.java
+          Xvfb -ac :99 -screen 0 1920x1080x16 &
+          mvn clean test -Dtest=**/integration/*Test.java
