--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,20 +1,21 @@
 name: Checkmarx One Eclipse Plugin
 
-on: [pull_request]
+on:
+  pull_request:
 
 jobs:
-  integration-tests:
+  ui-tests:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
         uses: actions/checkout@v3.5.2
-      
+
       - name: Set up JDK 8
         uses: actions/setup-java@v3
         with:
           distribution: temurin
           java-version: 8
-      
+
       - name: Cache local Maven repository
         uses: actions/cache@v3
         with:
@@ -22,8 +23,8 @@ jobs:
           key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
           restore-keys: |
             ${{ runner.os }}-maven-
-      
-      - name: Run Integration Tests
+
+      - name: Run UI Tests with Maven
         env:
           CX_BASE_URI: ${{ secrets.CX_BASE_URI }}
           CX_TENANT: ${{ secrets.CX_TENANT }}
@@ -33,4 +34,34 @@ jobs:
         run: |
           export DISPLAY=:99.0
           Xvfb -ac :99 -screen 0 1920x1080x16 &
-          mvn clean test -Dtest=**/integration/*Test.java
+          mvn clean verify -Dtest=**/ui/*Test
+
+  integration-tests:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3.5.2
+
+      - name: Set up JDK 8
+        uses: actions/setup-java@v3
+        with:
+          distribution: temurin
+          java-version: 8
+
+      - name: Cache local Maven repository
+        uses: actions/cache@v3
+        with:
+          path: ~/.m2/repository
+          key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
+          restore-keys: |
+            ${{ runner.os }}-maven-
+
+      - name: Run Integration Tests with Maven
+        env:
+          CX_BASE_URI: ${{ secrets.CX_BASE_URI }}
+          CX_TENANT: ${{ secrets.CX_TENANT }}
+          CX_APIKEY: ${{ secrets.CX_APIKEY }}
+          CX_TEST_SCAN: ${{ secrets.CX_TEST_SCAN }}
+          CX_NOT_MATCH_TEST_PROJECT: ${{ secrets.CX_NOT_MATCH_TEST_PROJECT }}
+        run: |
+          mvn clean verify -Dtest=**/integration/*Test
