--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,6 +4,31 @@ on:
     branches: 
       - main
 jobs:
+
+  ui-tests:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3.5.2
+      - uses: actions/setup-java@v3
+        with:
+          distribution: temurin
+          java-version: 8
+      - uses: actions/cache@v3
+        with:
+          path: ~/.m2/repository
+          key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
+          restore-keys: ${{ runner.os }}-maven-
+      - name: Run Integration Tests
+        env:
+          CX_BASE_URI: ${{ secrets.CX_BASE_URI }}
+          CX_TENANT: ${{ secrets.CX_TENANT }}
+          CX_APIKEY: ${{ secrets.CX_APIKEY }}
+          CX_TEST_SCAN: ${{ secrets.CX_TEST_SCAN }}
+          DISPLAY: :99.0
+        run: |
+          Xvfb -ac :99 -screen 0 1920x1080x16 &
+          run: mvn verify -Dtycho.surefire.includes="**/ui/*Test.java"
+    
   integration-tests:
     runs-on: ubuntu-latest
     steps:
