--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,7 +27,7 @@ jobs:
           DISPLAY: :99.0
         run: |
           Xvfb -ac :99 -screen 0 1920x1080x16 &
-          run: mvn verify -Dtycho.surefire.includes="**/ui/*Test.java"
+          mvn verify -Dtycho.surefire.includes="**/ui/*Test.java"
     
   integration-tests:
     runs-on: ubuntu-latest
