--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -31,6 +31,9 @@ jobs:
     if: inputs.rbranch
   release:
     runs-on: ubuntu-latest
+    outputs:
+      TAG_NAME: ${{ steps.generate_tag_name.outputs.TAG_NAME }}
+      CLI_VERSION: ${{ steps.extract_cli_version.outputs.CLI_VERSION }}
     steps:
       - name: Checkout
         uses: actions/checkout@v3.5.2
@@ -41,16 +44,27 @@ jobs:
       - name: Set env
         run: |
           echo "RELEASE_VERSION=${{ inputs.tag }}" >> $GITHUB_ENV
+
       - name: Create Release Name
+        id: generate_tag_name
         run: |
           echo "Creating release name"
           if [ -z "${{ inputs.rbranch }}" ]; then
-            echo "GH_RELEASE_TAG_NAME=${{ env.RELEASE_VERSION }}" >> $GITHUB_ENV
+            echo "GH_RELEASE_TAG_NAME=${{ inputs.tag }}" >> $GITHUB_ENV
             echo "GH_BRANCH_NAME=main" >> $GITHUB_ENV
           else
-           echo "GH_RELEASE_TAG_NAME=${{ env.RELEASE_VERSION }}-${{ inputs.rbranch }}" >> $GITHUB_ENV
+           echo "GH_RELEASE_TAG_NAME=${{ inputs.tag }}-${{ inputs.rbranch }}" >> $GITHUB_ENV
            echo "GH_BRANCH_NAME=nightly" >> $GITHUB_ENV
           fi
+          echo "Generated TAG_NAME: $GH_RELEASE_TAG_NAME"
+          echo "::set-output name=TAG_NAME::$GH_RELEASE_TAG_NAME"
+
+      - name: Extract CLI version
+        id: extract_cli_version
+        run: |
+          chmod +x ./.github/scripts/extract_cli_version.sh
+          ./.github/scripts/extract_cli_version.sh cx-linux
+          echo "::set-output name=CLI_VERSION::${{ env.CLI_VERSION }}"
         
       - name: Set up JDK 8
         uses: actions/setup-java@v3
@@ -67,7 +81,7 @@ jobs:
             ${{ runner.os }}-maven-
 
       - name: Update the POM version.
-        run: mvn -B org.eclipse.tycho:tycho-versions-plugin:set-version -DnewVersion='${{ env.RELEASE_VERSION }}' --file pom.xml 
+        run: mvn -B org.eclipse.tycho:tycho-versions-plugin:set-version -DnewVersion='$${{ inputs.tag }}' --file pom.xml
 
       - name: Create release
         run: mvn -B clean install --file pom.xml  -DskipTests -pl "!checkmarx-ast-eclipse-plugin-tests"
@@ -97,3 +111,16 @@ jobs:
           destination-repository-name: 'ast-eclipse-plugin-update-site'
           user-email: cylon-bot@checkmarx.com
           target-branch: ${{ env.GH_BRANCH_NAME }}
+
+  notify:
+    if: ${{ inputs.rbranch == '' || inputs.rbranch == null }}
+    needs: release
+    uses: Checkmarx/plugins-release-workflow/.github/workflows/release-notify.yml@main
+    with:
+      product_name: Eclipse
+      release_version: ${{ needs.release.outputs.TAG_NAME }}
+      cli_release_version: ${{ needs.release.outputs.CLI_VERSION }}
+      release_author: "Phoenix Team"
+      release_url: https://github.com/Checkmarx/ast-vscode-extension/releases/tag/${{ needs.release.outputs.TAG_NAME }}
+      jira_product_name: ECLIPSE
+    secrets: inherit
