--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -51,8 +51,8 @@ jobs:
            echo "GH_RELEASE_TAG_NAME=${{ inputs.tag }}-${{ inputs.rbranch }}" >> $GITHUB_ENV
            echo "GH_BRANCH_NAME=nightly" >> $GITHUB_ENV
           fi
-          echo "Generated TAG_NAME: ${{ env.GH_RELEASE_TAG_NAME }}"
-          echo "::set-output name=TAG_NAME::${{ env.GH_RELEASE_TAG_NAME }}"
+          echo "Generated TAG_NAME: $GH_RELEASE_TAG_NAME"
+          echo "::set-output name=TAG_NAME::$GH_RELEASE_TAG_NAME"
         
       - name: Set up JDK 8
         uses: actions/setup-java@v3
