--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -44,16 +44,24 @@ jobs:
         id: generate_tag_name
         run: |
           echo "Creating release name"
+
           if [ -z "${{ inputs.rbranch }}" ]; then
-            echo "GH_RELEASE_TAG_NAME=${{ inputs.tag }}" >> $GITHUB_ENV
-            echo "GH_BRANCH_NAME=main" >> $GITHUB_ENV
+            export GH_RELEASE_TAG_NAME="${{ inputs.tag }}"
+            export GH_BRANCH_NAME="main"
           else
-           echo "GH_RELEASE_TAG_NAME=${{ inputs.tag }}-${{ inputs.rbranch }}" >> $GITHUB_ENV
-           echo "GH_BRANCH_NAME=nightly" >> $GITHUB_ENV
+            export GH_RELEASE_TAG_NAME="${{ inputs.tag }}-${{ inputs.rbranch }}"
+            export GH_BRANCH_NAME="nightly"
           fi
+
           echo "Generated TAG_NAME: $GH_RELEASE_TAG_NAME"
-          echo "::set-output name=TAG_NAME::$GH_RELEASE_TAG_NAME"
-        
+
+          # Persist the variables
+          echo "GH_RELEASE_TAG_NAME=$GH_RELEASE_TAG_NAME" >> $GITHUB_ENV
+          echo "GH_BRANCH_NAME=$GH_BRANCH_NAME" >> $GITHUB_ENV
+
+          # Set outputs for future steps
+          echo "TAG_NAME=$GH_RELEASE_TAG_NAME" >> $GITHUB_OUTPUT
+
       - name: Set up JDK 8
         uses: actions/setup-java@v3
         with:
